WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297764
[web-animations] `Animation.commitStyles()` does not commit custom properties
https://bugs.webkit.org/show_bug.cgi?id=297764
Summary
[web-animations] `Animation.commitStyles()` does not commit custom properties
Antoine Quint
Reported
2025-08-21 22:48:00 PDT
We are failing the subtest related to custom properties in the WPT test `web-animations/interfaces/Animation/commitStyles.html`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-21 22:48:34 PDT
<
rdar://problem/158919736
>
Antoine Quint
Comment 2
2025-08-21 22:55:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49753
EWS
Comment 3
2025-08-22 01:15:12 PDT
Committed
299045@main
(67574dc9fe52): <
https://commits.webkit.org/299045@main
> Reviewed commits have been landed. Closing PR #49753 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug