[web-animations] `Animation.commitStyles()` does not commit custom properties https://bugs.webkit.org/show_bug.cgi?id=297764 rdar://158919736

Reviewed by Tim Nguyen.

The `WebAnimation::commitStyles()` method applies effects in an effect stack on a `RenderStyle`
object that is never associated directly with the animation effect's target element. As such,
we must provide the `RenderStyle` object directly to the `Style::Extractor` object being used,
just like we do in the CSSPropertyID case.

We add a new `customPropertyValueSerializationInStyle()` method to `Style::Extractor` that we
call from `WebAnimation::commitStyles()` and refactor the existing `customPropertyValueSerialization()`
to use it as well.

* LayoutTests/imported/w3c/web-platform-tests/web-animations/interfaces/Animation/commitStyles-expected.txt:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::commitStyles):
* Source/WebCore/style/StyleExtractor.cpp:
(WebCore::Style::Extractor::customPropertyValueSerialization const):
(WebCore::Style::Extractor::customPropertyValueSerializationInStyle const):
* Source/WebCore/style/StyleExtractor.h:

Canonical link: https://commits.webkit.org/299045@main